# MAI_OOP

lab1/: CMakeLists.txt  main.cpp
lab1/include/: Solution.hpp
lab1/src/: Solution.cpp
lab1/test/: tests.cpp
lab2/: CMakeLists.txt
lab3/: CMakeLists.txt  main.cpp
lab3/src/: Hexagon.cpp  Octagon.cpp  Triangle.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: FigureArray.hpp
lab4/src/: FigureArray.cpp
lab5/: CMakeLists.txt
lab5/include/: Allocator.hpp
